@@ -665,6 +665,7 @@ print.ls_str <- function(x, max.level = 1, give.attr = FALSE,
     }
     strargs <- c(list(max.level = max.level, give.attr = give.attr,
                       digits.d = digits), args)
+    n. <- substr(tempfile("ls_str_", tmpdir=""), 2L, 20L)
     for(nam in x) {
 	cat(nam, ": ")
 	## check missingness, e.g. inside debug(.) :
@@ -677,8 +678,10 @@ print.ls_str <- function(x, max.level = 1, give.attr = FALSE,
 ##__	    str(get(nam, envir = E, mode = M),
 ##__		max.level = max.level, give.attr = give.attr, ...)
 
-	o <- tryCatch(get(nam, envir = E, mode = M), error = function(e)e)
-	if(inherits(o, "error")) {
+	eA <- sprintf("%s:%s", nam, n.)
+	o <- tryCatch(get(nam, envir = E, mode = M),
+		      error = function(e){ attr(e, eA) <- TRUE; e })
+	if(inherits(o, "error") &&  isTRUE(attr(o, eA))) {
 	    cat(## FIXME: only works with "C" (or English) LC_MESSAGES locale!
 		if(length(grep("missing|not found", o$message)))
 		"<missing>" else o$message, "\n", sep = "")
